<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="#212021" >

        
        
        
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:background="#000000"
    android:layout_weight="4" >

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_marginTop="10dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginBottom="10dp"
	     >
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Info1"
	        tools:context=".Info"
	        android:textColor="#FFFFFF" />
	    
	    <Space
	        android:layout_width="match_parent"
	        android:layout_height="40dp" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/warning"
	        tools:context=".Info"
	        android:background="#F4C540"
	        android:textColor="#212021" />
	    
	    <Space
	        android:layout_width="match_parent"
	        android:layout_height="40dp" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Info2"
	        tools:context=".Info"
	        android:textColor="#FFFFFF" />
	    
	    <Space
	        android:layout_width="match_parent"
	        android:layout_height="40dp" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Info3"
	        tools:context=".Info"
	        android:textColor="#FFFFFF" />
	    
	    <Space
	        android:layout_width="match_parent"
	        android:layout_height="40dp" />

	    
	
	</LinearLayout>
	</ScrollView>
    
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >
		
        <TextView
	        android:id="@+id/orient"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textColor="#FFFFFF"
	        android:text="@string/barInfo" />
        
    </RelativeLayout>
    
    
        
</LinearLayout>
